# genAISideProject

./: .gitignore  README.md
backend/: .env.backend  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: restserver.py
backend/app/api/: health.py  routes.py
backend/app/api/dl/: conversation.py
backend/app/api/endpoints/: conversation.py
backend/app/api/init/: deps.py
backend/app/chat/: chat.py  llm_engine.py  prompt.py  stream.py
backend/app/consts/: const.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: base.py  db.py
backend/app/spec/: schema.py
backend/migrations/: env.py
backend/migrations/versions/: 309629187fe4_added_initial_setup.py  b86ab329876b_added_initial_setup.py
backend/scripts/: chat.py  chat2.py  seed_vectorindex.py
frontend/: .env.frontend  Dockerfile  build-env.sh  build.sh  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/: env.js
frontend/src/components/conversation/: AssistantMessageDisplay.tsx  EnterConversation.tsx  ErrorMessageDisplay.tsx  RenderConversation.tsx  UserMessageDisplay.tsx
frontend/src/components/layouts/: ConversationLayout.tsx  Layout.tsx
frontend/src/consts/: const.tsx
frontend/src/hooks/: useMessages.tsx
frontend/src/lib/: restClientConversation.tsx
frontend/src/pages/: _app.tsx  _document.js  index.tsx
frontend/src/server/: auth.ts
frontend/src/styles/: globals.css
frontend/src/types/: conversation.tsx
(+3 files in other folders)
